--- a/index.css
+++ b/index.css
@@ -2,11 +2,16 @@ body {
     margin: 0;
     background-color: #9f1239;
     color: #fff;
+    font-family: courier;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .container {
     display: flex;
     justify-content: space-around;
+    max-width: 600px;
 }
 
 .score {
