--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ body {
     color: #fff;
     font-family: courier;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     flex-direction: column;
 }
